--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ModernBrand</title>
+    <title>Stilledly</title>
     <style>
         * {
             margin: 0;
@@ -377,7 +377,7 @@
 <body>
     <nav>
         <div class="container">
-            <a href="#" class="logo">ModernBrand</a>
+            <a href="#" class="logo">Stilledly</a>
             <ul class="nav-links">
                 <li><a href="#" onclick="showPage('home')" class="nav-link active">Home</a></li>
                 <li><a href="#" onclick="showPage('store')" class="nav-link">Store</a></li>
@@ -390,7 +390,7 @@
     <div id="home" class="page active">
         <div class="container">
             <section class="hero">
-                <h1>Welkom bij de Toekomst</h1>
+                <h1>Welkom! (dit is een testsite, alle producten en antwoorden zijn nep.)</h1>
                 <p>Ontdek onze innovatieve producten en ervaar het verschil</p>
                 <a href="#" onclick="showPage('store')" class="cta-button">Ontdek Onze Producten</a>
             </section>
